--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -4,20 +4,20 @@
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="name">Name</label>
-          <input type="text" id="name" class="form-control" #nameInput>
+          <input #nameInput class="form-control" id="name" type="text">
         </div>
         <div class="col-sm-2 form-group">
           <label for="amount">Amount</label>
-          <input type="number" id="amount" class="form-control" #amountInput>
+          <input #amountInput class="form-control" id="amount" type="number">
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <button class="btn btn-success" type="submit"
-                  (click)="addIngredients(nameInput.value, amountInput.valueAsNumber)">Add
+          <button (click)="addIngredients(nameInput.value, amountInput.valueAsNumber)" class="btn btn-success"
+                  type="submit">Add
           </button>
-          <button class="btn btn-danger" type="button" (click)="deleteIngredients(nameInput.value)">Delete</button>
-          <button class="btn btn-primary" type="button" (click)="clearIngredients()">Clear</button>
+          <button (click)="deleteIngredients(nameInput.value)" class="btn btn-danger" type="button">Delete</button>
+          <button (click)="clearIngredients()" class="btn btn-primary" type="button">Clear</button>
         </div>
       </div>
     </form>
